style: Remove unnecessary type arguments